--- a/client/index.html
+++ b/client/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>BattleCity-js</title>
+    <link rel="icon" href="/favicon.ico" type="image/x-icon" sizes="32x32" />
     <style>
       :root {
         color-scheme: dark;
